@@ -102,12 +102,21 @@ and update the time each time <command>ntpd</command> is scheduled.</para>
 <filename>/etc/rc.d/init.d/ntp</filename>
 init script included in the
 <xref linkend="intro-important-bootscripts"/> package.</para>
-                                                                                                                
+
 <screen><userinput><command>make install-ntp</command></userinput></screen>
 
 <para>If you prefer to run ntpd periodically, add the following command to
 root's <filename>crontab</filename>:</para>
 <screen><userinput>ntpd -q</userinput></screen>
+
+<para>Execute the following command if you would like to set the
+hardware clock at shutdown and reboot based on the current system
+time:</para>
+
+<screen><userinput><command>ln -sf ../init.d/setclock /etc/rc.d/rc{0,6}.d/K46setclock</command></userinput></screen>
+
+<para>The other way around is already set up by
+<acronym>LFS</acronym>.</para>
 
 </sect3>
 
