@@ -22,6 +22,10 @@ who wrote what.</para>
 
 <itemizedlist>
 
+<listitem><para>November 21st, 2004 [igor]: NTP: removed setclock
+symlinks in the install-ntp bootscripts target and provided the command
+in the book instead.</para></listitem>
+
 <listitem><para>November 21st, 2004 [igor]: Updated to
 Fcron-2.9.5.1.</para></listitem>
 
