@@ -1,3 +1,7 @@
+2004-11-21 Igor Zivkovic <igor@linuxfromscratch.org>
+	* Removed setclock symlinks at install-ntp target and added a
+	  substitute command in the book.
+
 2004-10-27 Randy McMurchy <randy@linuxfromscratch.org>
 	* Added new bootscript for Stunnel.
 
